--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,43 @@
-# Local .terraform directories
-**/.terraform/*
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# .tfstate files
-*.tfstate
-*.tfstate.*
+# Dependencies
+node_modules
+dist
+dist-ssr
+*.local
 
-# Crash log files
-crash.log
-crash.*.log
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
-*.tfvars
-*.tfvars.json
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Ignore override files as they are usually used to override resources locally and so
-# are not checked in
-override.tf
-override.tf.json
-*_override.tf
-*_override.tf.json
+# Testing
+coverage
 
-# Include override files you do wish to add to version control using negated pattern
-# !example_override.tf
+# Production
+build
 
-# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
-
-# Ignore CLI configuration files
-.terraformrc
-terraform.rc
+# Miscellaneous
+.cache
+.parcel-cache
