vibe coded a bit too much : )

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,10 @@ pnpm-debug.log*
 lerna-debug.log*
 
 # Dependencies
-node_modules
-dist
-dist-ssr
-*.local
+client/node_modules
+client/dist
+client/dist-ssr
+client/*.local
 
 # Editor directories and files
 .vscode/*
@@ -24,6 +24,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+*.swo
 
 # Environment variables
 .env
@@ -31,13 +32,58 @@ dist-ssr
 .env.development.local
 .env.test.local
 .env.production.local
+client/.env
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+client/.env.production.local
+backend/.env
 
 # Testing
-coverage
+client/coverage
 
 # Production
-build
+client/build
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+venv/
+.venv/
+ENV/
+
+# Django
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media/
+staticfiles/
+
+# Docker
+.docker/
+docker-compose.override.yml
 
 # Miscellaneous
 .cache
 .parcel-cache
+client/.cache
+client/.parcel-cache
